--- a/todo
+++ b/todo
@@ -1,7 +1,8 @@
+easier to do big wall jumps
 if you break someone's chain and then they fall /wo sword, you get point
 more of a ledge to recover from fall in level 2
 bigger loose sword recovery hitbox
 faster respawn as player count gets lower
-8 dir doesn't add much
 music keeps vanishing (tab change? nonlooping?)
 join bubbles stop bobbing if you change tabs and back
+
